--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
             <artifactId>jol-core</artifactId>
             <version>0.15</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.bytedeco</groupId>-->
-<!--            <artifactId>javacv-platform</artifactId>-->
-<!--            <version>1.5.6</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.bytedeco</groupId>
